<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default_value" translatable="false">94043</string>
    <string name="pref_temperature_units_title">Temperature Units</string>
    <string name="pref_temperature_units_key" translatable="false">Temperature Units</string>
    <string name="pref_temperature_units_metric" translatable="false">metric</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share Weather</string>
    <string name="pref_temperature_units_imperial">imperial</string>
    <string name="format_friendly_temperature"><xliff:g id="temp">%1$.0f</xliff:g>\u00B0</string>
    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="open_weather_api_key" translatable="false">3f9a9ca07a6ab465c489a7be089faf8e</string>
    <string name="empty_forecast_list_default">No Weather Information Available.</string>
    <string name="empty_forecast_list_no_network_connection">No Weather Information Available. The network is unavailable to fetch weather.</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in the settings is not a valid location.</string>
    <string name="pref_location_status_key" translatable="false">network_status</string>

    <string name="pref_status_invalid_location">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)</string>
    <string name="pref_status_unknown_location">Validation Location (<xliff:g id="location_setting">%1$s</xliff:g>)</string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>


    <!-- Empty Weather Database -->
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>

    <!-- A11y -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>

    <!-- Weather Conditions -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

</resources>
