<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/sunshine.karlnelson.app">

    <sunshine.karlnelson.app.views.LocationEditTextPreference
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default_value"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3"/>

    <ListPreference
        android:title="@string/pref_temperature_units_title"
        android:key="@string/pref_temperature_units_key"
        android:entries="@array/pref_temperature_units"
        android:entryValues="@array/pref_temperature_units_values"
        android:defaultValue="@string/pref_temperature_units_metric"
        />
    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        />


</PreferenceScreen>